--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -28,7 +28,8 @@ h6 {
   color: var(--mainYellow);
   font-size: 2rem;
 }
-.default-background {
+.default-background,
+.about-background {
   min-height: 100vh;
   display: flex;
   align-items: center;
@@ -49,4 +50,8 @@ h6 {
 }
 .footer {
   background: var(--mainBrown);
+}
+
+.about-background {
+  min-height: 60vh;
 }
